# MarkUp

./: package-lock.json
src/: editor.html  editor.js  index.html  preview.css  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/assets/: showdown-2.1.0.js
src/assets/codemirror/js/: codemirror-6.65.7.js  markdown-6.65.7.js
