[package]
name = "markup"
version = "1.0.0"
description = "A simple markdown editor app"
authors = ["KoolApps Team"]
license = "MIT"
repository = "https://github.com/teamkoolapps/MarkUp"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
tauri-bundler = "1.1.2"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = ["clipboard-all", "dialog-all", "fs-all", "shell-open", "updater", "window-set-fullscreen", "window-set-resizable"] }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
